# XJTUComputationalMethods

./: README.md  test.md
cavity_data/: cavity_final_t5.000000.csv  cavity_step000000_t0.000000.csv  cavity_step000500_t0.500000.csv  cavity_step001000_t1.000000.csv  cavity_step001500_t1.500000.csv  cavity_step002000_t2.000000.csv  cavity_step002500_t2.500000.csv  cavity_step003000_t3.000000.csv  cavity_step003500_t3.500000.csv  cavity_step004000_t4.000000.csv  cavity_step004500_t4.500000.csv
chapters/: cavity.cpp  chapter02.cpp  chapter03.cpp  chapter04.cpp  chapter05.cpp  chapter07.cpp  utils.cpp
include/: cavity.hpp  chapter02.hpp  chapter03.hpp  chapter04.hpp  chapter05.hpp  chapter07.hpp  utils.hpp
python_package/: CM_pkg.cp313-win_amd64.pyd  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.py
src/: main.cpp
